# python-service-template

./: README.md  cookiecutter.json
{{ cookiecutter.name }}/: .dockerignore  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
{{ cookiecutter.name }}/debian/: changelog  control  copyright
{{ cookiecutter.name }}/etc/{{ cookiecutter.name }}/: config.yml
{{ cookiecutter.name }}/integration_tests/assets/: docker-compose.yml
{{ cookiecutter.name }}/integration_tests/assets/etc/{{ cookiecutter.name }}/: 50-default.yml
{{ cookiecutter.name }}/{{ cookiecutter.slug }}/: main.py
