[metadata]
name = {{ cookiecutter.name }}
home_page = https://github.com/{{ cookiecutter.github_org }}/{{ cookiecutter.name }}
summary = {{ cookiecutter.description }}
description_file = README.md
author = {{ cookiecutter.author }}
author_email = <{{ cookiecutter.author_email }}>
version = 1.0
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:

include_package_data = true

install_requires =
    xivo

[options.packages.find]
exclude =
    integration_tests

[options.package_data]
* = *.txt, *.rst, *.ini, *.md

[options.extras_require]
test =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    {{ cookiecutter.name }} = {{ cookiecutter.slug }}.main:main

[build_wheel]
universal = 1

[mypy]
ignore_missing_imports = True
follow_imports = skip
strict_optional = True
